[tool.poetry]
name = "tiktouk"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
pytube = "^15.0.0"
moviepy = "^1.0.3"
customtkinter = "^5.2.2"
srt = "^3.5.3"
whisper = "^1.1.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
